assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');

/* single elements */

* {
    padding: 0;
    border: none;
    margin: 0;
}

body {
    font-family: Lato, sans-serif;
}

h1 {
    padding: 32px 0 0 32px;
    font-size: 350%;
}

h2 {
    font-size: 260%;
}

/* header */

#title {
    width: 100%;
    background-color: #9a9a9a;
    color: white;
}

#title>a {
    color: white;
    text-decoration: none;
}

#hero-image {
    width: 100%;
    height: 192px;
    color: white;
    background-color: #9a9a9a;
    /* hero image from shutterstock */
    background: url("../images/hero-image.jpg") no-repeat center center;
}

#title h3 {
    padding: 0 0 16px 64px;
}

/* navigation */

#navigation {
    width: 100%;
    height: 64px;
    background-color: #9a9a9a;
    color: white;
    text-align: center;
}

nav li {
    display: inline-block;
    width: 25%;
}

nav a {
    text-decoration: none;
    color: white;
    font-size: 130%;
    line-height: 64px;
}

nav a:hover {
    font-weight: bold;
}

#nav-selected {
    border-bottom: 1px solid white;
}

/* description of site */

.page-description {
    display: flex;
    width: 100%;
    height: 480px;
    text-align: center;
    margin-top: 32px;
}

.page-description-reverse {
    display: flex;
    flex-direction: row-reverse;
    width: 100%;
    height: 480px;
    text-align: center;
    margin-top: 32px;
}

.page-description p,
.page-description-reverse p {
    font-size: 150%;
}

.description-text {
    width: 60%;
    padding: 160px 32px;
}

.description-image {
    height: 100%;
    padding: 0 32px;
}

.left-about {
    text-align: left;
}

.right-about {
    text-align: right;
}

/* finishing text */

#description-end {
    text-align: center;
    font-size: 150%;
    width: 50%;
    margin: 64px auto;
}

#to-menu {
    border: 1px solid black;
    color: white;
    background-color: #9a9a9a;
    text-decoration: none;
    padding: 16px;
    display: block;
    width: 128px;
    margin: 16px auto 0 auto;
}

#to-menu:hover {
    color: #9a9a9a;
    background-color: white;
}

#to-top {
    font-size: 80%;
}

/* footer */

footer>div {
    width: 100%;
    height: 128px;
    background-color: #9a9a9a;
    font-size: 150%;
}

footer p {
    padding: 48px 32px;
    display: inline-block;
    color: white;
}

#social-media>a {
    display: inline-block;
    text-decoration: none;
    color: white;
    margin: 0 16px;
}

#copyright {
    float: right;
}

/* menu of the day */

#daily-menu {
    text-align: center;
}

#daily-menu>div {
    display: inline-block;
    width: 20%;
    height: 448px;
    margin: 128px 32px;
    background-color: #9a9a9a;
    position: relative;
}

.course-image {
    width: 100%;
    height: 448px;
    overflow: hidden;
    position: relative;
}

#daily-menu details {
    width: 100%;
    font-size: 200%;
    background-color: #9a9a9a;
    color: white;
    position: absolute;
    top: 0;
}

#daily-menu summary:hover {
    font-weight: bold;
    cursor: pointer;
}

details>div {
    height: 378px;
}

#daily-menu a {
    color: white;
    text-decoration: none;
}

#daily-menu a:hover {
    font-weight: bold;
    text-decoration: 2px underline;
}

.image-wide {
    height: 100%;
}

.image-long {
    width: 100%;
    position: absolute;
    bottom: 0;
    left: 0;
}

details ul {
    margin: 32px 0 32px 40px;
}

details li {
    text-align: left;
    margin: 16px 0;
}

/* recipe introduction */

#recipe>div {
    margin: 32px;
}

#recipe p {
    font-size: 150%;
}

#recipe #requested-recipe {
    font-size: 100%;
    margin: 16px 0 32px 64px;
}

/* recipe ingredients and method */

#ingredients-grid {
    display: grid;
    grid-template-columns: 2fr 1fr 5fr 1fr;
    grid-template-rows: 32px 1fr;
    min-height: 480px;
}

/* for recipe pages containing large ingredients lists that will be divided. Can fit up to 3 ingredient groups */
#ingredients-large-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 2fr;
    grid-template-rows: 64px 1fr;
    min-height: 480px;
}

.ingredients {
    grid-row-start: 2;
    grid-row-end: 3;
}

.ingredients>p,
.ingredients-divided>p {
    font-weight: bold;
}

.ingredients-image {
    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 1;
    grid-row-end: 3;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
}

.ingredients-large-image {
    grid-column-start: 4;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 3;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
}

#recipe ul,
#recipe ol {
    padding-left: 32px;
}

#recipe h3 {
    font-size: 180%;
}

#recipe li {
    font-size: 150%;
    margin: 16px 32px;
}

/* images for each recipe */

#image-eggs-ben {
    background-image: url("../images/recipe-eggs-benedict.jpeg");
}

#image-pancakes {
    background-image: url("../images/recipe-pancakes.jpeg");
}

#image-avo-toast {
    background-image: url("../images/recipe-avocado-toast.jpeg");
}

#image-blt {
    background-image: url("../images/recipe-blt.jpg");
}

#image-soup {
    background-image: url("../images/recipe-soup.webp");
}

#image-tuna-melt {
    background-image: url("../images/recipe-tuna-melt.jpg");
}

#image-chilli {
    background-image: url("../images/recipe-chilli.jpeg");
}

#image-bolognese {
    background-image: url("../images/recipe-bolognese.jpg");
}

#image-steak-sandwich {
    background-image: url("../images/recipe-steak-sandwich.jpeg");
}

#image-brownie {
    background-image: url("../images/recipe-brownies.jpeg");
}

#image-orange-cake {
    background-image: url("../images/recipe-orange-cake.jpeg");
}

#image-cookies {
    background-image: url("../images/recipe-cookies.jpeg");
}

/* recipe conclusion */

#recipe-end {
    padding: 32px 0;
    text-align: center;
}

#recipe-end>p {
    margin-top: 16px;
    font-size: 120%;
}

/* recipe request */

#recipe-request>div {
    margin: 32px;
}

#recipe-request p {
    font-size: 150%;
}

#request-form {
    height: 480px;
}

#request-form>form {
    width: 80%;
    height: 100%;
    background-color: #9a9a9a;
    /* to align to center of page */
    margin: 0 auto;
    border-radius: 16px;
    text-align: center;
}

#form-details {
    height: 320px;
    color: white;
    display: grid;
    grid-template-columns: 1fr 32px 1fr;
    grid-template-rows: 2fr 3fr 3fr;
    padding: 32px;
    text-align: left;
}

label {
    font-size: 150%;
    margin-top: 32px;
}

.small-text {
    font-size: 100%;
}

.input-text {
    width: 96%;
    font-size: 120%;
    font-family: Lato, sans-serif;
    padding: 8px 2%;
}

textarea {
    resize: none;
    font-size: 120%;
    font-family: Lato, sans-serif;
}

/* individual form input elements */

#form-fname {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 2;
}

#form-lname {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 2;
    grid-row-end: 3;
}

#form-email {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 3;
    grid-row-end: 4;
}

#form-foodtype {
    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 1;
    grid-row-end: 2;
}

#form-course {
    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 2;
    grid-row-end: 3;
}

#form-feedback {
    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 3;
    grid-row-end: 4;
}

/* submit and clear form buttons */

.form-button {
    padding: 16px 0;
    width: 128px;
    margin: 0 32px;
    text-transform: uppercase;
    background-color: #7c7c7c;
    border: 1px solid black;
    border-radius: 8px;
    font-family: Lato, sans-serif;
    font-weight: bold;
    color: white;
}

.form-button:hover {
    background-color: white;
    color: #7c7c7c;
}

/* thank you page after form submission */

#thank-you {
    margin: 32px;
}

#thank-you p {
    font-size: 150%;
    margin-bottom: 32px;
}

#thanks-video {
    text-align: center;
}

/**** MEDIA QUERIES ****/

/* for rearranging the grid cells for the large ingredients recipes */
@media screen and (min-width: 1201px) {

    .ingredients-divided {
        grid-row-start: 2;
        grid-row-end: 3;
    }
}

/* for large to medium screen sizes */
@media screen and (max-width: 1300px) {

    /* menu */
    #daily-menu>div {
        width: 40%;
        margin: 64px 32px;
    }
}

/* for medium screen sizes */
@media screen and (max-width: 1200px) {

    /* home page */
    .page-description {
        display: block;
        margin: 0;
        height: auto;
    }

    .page-description-reverse {
        display: block;
        height: auto;
        margin: 0;
        flex-direction: none;
    }

    .description-text {
        padding: 32px 0;
        width: 100%;
        text-align: left;
    }

    .description-text>h2 {
        padding: 32px 8px 0 8px;
    }

    .description-text>p {
        padding: 0 8px;
    }

    .description-image {
        width: 100%;
        height: auto;
        padding: 32px 0;
    }

    /* normal recipes */
    #ingredients-grid {
        grid-template-columns: 2fr 0 5fr 0;
    }

    /* recipes with multiple ingredients lists */
    #ingredients-large-grid {
        grid-template-columns: 3fr 1fr 5fr 1fr;
        grid-template-rows: 64px 1fr 1fr 1fr;
    }

    .ingredients-divided {
        grid-column-start: 1;
        grid-column-end: 2;
    }

    .ingredients-large-image {
        grid-column-start: 3;
        grid-column-end: 4;
        grid-row-start: 1;
        grid-row-end: 5;
        background-repeat: no-repeat;
        background-position: center center;
        background-size: cover;
    }
}

